assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:wght@300;400&display=swap');

:root {
  --left-bg-color: rgba(87, 84, 236, 0.7);
  --right-bg-color: rgba(43, 43, 43, 0.7);
  --left-btn-hover-color: #B30739;
  --right-btn-hover-color: rgba(28, 122, 28, 1);
  --hover-width-menu: 75%;
  --other-width-menu: 25%;
  --hover-width-pete: 15%;
  --other-width-pete: 100%;

  --hover-width-midmenu: 55%;
  --other-width-midmenu: 25%;
  --hover-width-midpete: 15%;
  --other-width-midpete: 100%;

  --hover-width-smallmenu: 35%;
  --other-width-smallmenu: 25%;
  --hover-width-smallpete: 15%;
  --other-width-smallpete: 100%;



  --speed: 1500ms;
}

* {
  box-sizing: border-box;
}



body {
  font-family: 'Roboto', sans-serif;
  height: 100vh;
  /* overflow: hidden; */
  margin: 0;
  background: black;
}

a {
  text-decoration: none;
  color: var(--left-bg-color)
}

.round {
  justify-content: center;
  opacity: 1;
  display: block;
  height: auto;
  backface-visibility: hidden;
  border-radius: 50%;
  border: 0;
  margin-left: auto;
  margin-right: auto;
}

.round-image {
margin: 0;

max-width: 65%;
  border-radius: 50%;


}

.showcase {
  position: relative;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 0 20px;
}

.video-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
		
}

.video-container video {
	min-width: 100%;
	min-height: 100%;
  position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	object-fit: cover;
}

#about{
  padding: 40px;
  text-align: center;

}

#about p {
  font-size: 1.2rem;
  max-width: 600px;
  margin: auto;
}

#about h2 {
  margin: 30px 0;
  color: var(--left-bg-color);
}

.social a {
  margin: 0 5px;
  color: #B30739;
}

.bg {
  height: 50%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}


.content {
  position: absolute;
  text-align: center;
  background: rgba(0, 0, 0, 0.4);
  color: #f1f1f1;
  padding: 50px;
  top: 50%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
}

.homeContent {
  position: absolute;
  text-align: center;
  background: black;
height: 100%;
  width: 100%;
}

.textContent {
  position: relative;
  text-align: center;
  background: black;
  padding: 25px;
  margin: 25px;

}

.logo{ 
	position: absolute;
	top:10px; 
	left:10px; 
  background: none;
  z-index: 1;
} 

.logoImg{

  width: 45%;
  margin-left: 10px;

}




.name {
  font-size: 80px;
  margin: 0;
  opacity: 0;
  transition: 1s opacity;
  animation: 2s anim-name ease-out;
}

.key, .collab {
  font-size: 4rem;
}

.oa {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 700;
  font-size: 40px;
  margin: 10px;
  opacity: 1;
  /* transition: 1s opacity; */
  /* animation: 2s anim-name ease-out; */
}

.name2, .name3 {
  margin: 0;
  opacity: 0;
  transition: 1s opacity;
}

.animationClass, .fadeText-film, .logo, .fadeContact {
  opacity: 1;
  transition: 2s opacity;
}



@keyframes anim-name {
  0% {
    opacity: 0;
    transform: translateY(80%);
  }
  20% {
    opacity: 0;
  }
  50% {
    opacity: 1;
    transform: translateY(0%);
  }
  100% {
    opacity: 1;
    transform: translateY(0%);
    animation-play-state: paused;
  }
}
.menu-items {
  position: fixed;
  /* display: flex; */
  align-items: left;
  text-align: left;
  justify-content: center;
  right: 10%;
  top: 15%;
  text-decoration: none;
  width: 10rem;
  padding: 1rem;
  opacity: 0;
  cursor: pointer;
  transition: 1.2s opacity;

}






.producer {
  margin: 0;
}


.menubtn {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  right: 5%;
  top: 10%;
  transform: translateX(-50%);
  text-decoration: none;
  background-color: #2a2929;
  background-color: transparent;
  color: #fff;
  border: #fff solid 0.1rem;
  font-size: 1rem;
  width: 6rem;
  padding: 1rem;
  border-radius: 3px;
  cursor: pointer;
}




ul {
  list-style-type: none;
  width: 200px;
  
}

li {
  margin-bottom: 15px;

}

li a {
  padding: 20px;
  font-size: 20px; 
  color: white;
  font-size: 1rem;
  text-align: left; 
 text-decoration: none;
 text-transform: uppercase;
}
.list {
  font-size: 18px;
  white-space: nowrap;
}


.mysumm{
  font-size: 18px; 
  margin-left: 15%;
  white-space: nowrap;
  color: white;
}

.summ {
  font-size: 14px; 
  margin-left: 5%;
  padding-left: 10px;
  white-space: nowrap;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
 
 }


.list:hover, .summ:hover, .myHover:hover {
  color: var(--left-btn-hover-color);
  text-decoration: none;
 
}




.menubtn:hover {
  background-color: rgb(37, 34, 35);
  border-color: rgb(37, 34, 35);
  

  
}

.container, .filmContainer {
  position: relative;
  width: 100%;
  height: 100%;
  background: black;
  margin: 0 !important;

}

.homeBackground {
  position: relative;
  height: 100%;
  width: 100%;
  background-color: black;
  z-index: 1;
}

.split-left {
  position: absolute;
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
}


.split-right {
  position: absolute;
  width: 20%;
  height: 100%;
  right: 0;
  
}

.split-left {
  left: 0;
 
}
#summary {
  background: #666;
  width: 100px;
  color: #fff;
}

#summary:hover {
  cursor: pointer;
  color: #fff200;
}

#detail {
  width: 300px;
  height: 300px;
  background: #fff200;
  display: none;
}


.split-right::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--right-bg-color);
}

.split-right,
.split-left,
.split-right::before,
.split-left::before {
  transition: all var(--speed) ease-in-out;
}

.hover-left .split-left {
  width: var(--hover-width-menu);
}

.hover-left .split-right {
  width: var(--other-width-menu);
}
/* ... */

